--- a/Practica3_CSS/index.html
+++ b/Practica3_CSS/index.html
@@ -123,7 +123,7 @@
     </div>
     
     <footer class="footer">
-        <p>@2022 Vaccination. All rigths reserved</p>
+        <p>@2022 Vaccination. All rigths reserved. Marlen Andrade</p>
     </footer>
 </body>
 </html>
